spotbug 检测的问题简单修复